target/generated-sources/antlr4/grammar/flask/FlaskParser.java
// Generated from grammar/flask/FlaskParser.g4 by ANTLR 4.13.1
package grammar.flask;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class FlaskParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INDENT=1, DEDENT=2, AND=3, AT=4, AS=5, ASSERT=6, BREAK=7, CLASS=8, CONTINUE=9, 
		DEF=10, DEL=11, IF=12, ELIF=13, ELSE=14, EXCEPT=15, FALSE=16, FINALLY=17, 
		FOR=18, FROM=19, GLOBAL=20, IMPORT=21, IN=22, IS=23, NONE=24, NOT=25, 
		OR=26, PASS=27, RAISE=28, RETURN=29, TRY=30, TRUE=31, WHILE=32, WITH=33, 
		ASYNC=34, AWAIT=35, LAMBDA=36, NONLOCAL=37, YIELD=38, GTE=39, LTE=40, 
		NEQ=41, EQ=42, POWER=43, FLOOR_DIV=44, ADD_ASSIGN=45, SUB_ASSIGN=46, MUL_ASSIGN=47, 
		DIV_ASSIGN=48, ELLIPSIS=49, ARROW=50, ASSIGN=51, ADD=52, SUB=53, MUL=54, 
		DIV=55, MOD=56, GT=57, LT=58, DOT=59, LPAREN=60, RPAREN=61, LBRACK=62, 
		RBRACK=63, LBRACE=64, RBRACE=65, COLON=66, COMMA=67, SEMICOLON=68, STRING=69, 
		NUMBER=70, IDENTIFIER=71, NEWLINE=72, SKIP_=73, UNKNOWN_CHAR=74;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_simple_statement = 2, RULE_small_stmt = 3, 
		RULE_returnStatement = 4, RULE_passStatement = 5, RULE_breakStatement = 6, 
		RULE_continueStatement = 7, RULE_delStatement = 8, RULE_targetList = 9, 
		RULE_assertStatement = 10, RULE_globalStatement = 11, RULE_raiseStatement = 12, 
		RULE_nonlocalStatement = 13, RULE_compound_statement = 14, RULE_asyncFunctionDef = 15, 
		RULE_asyncForStatement = 16, RULE_asyncWithStatement = 17, RULE_ifStatement = 18, 
		RULE_forStatement = 19, RULE_whileStatement = 20, RULE_withStatement = 21, 
		RULE_withItem = 22, RULE_tryStatement = 23, RULE_exceptClause = 24, RULE_classStatement = 25, 
		RULE_expression_statement = 26, RULE_decoratedDef = 27, RULE_decorator = 28, 
		RULE_functionDef = 29, RULE_parameters = 30, RULE_parameter = 31, RULE_annotatedAssignmentStatement = 32, 
		RULE_suite = 33, RULE_block = 34, RULE_importStatement = 35, RULE_importNameStatement = 36, 
		RULE_importFromStatement = 37, RULE_relativeImportTarget = 38, RULE_importAsName = 39, 
		RULE_importAsNames = 40, RULE_dottedName = 41, RULE_assignmentStatement = 42, 
		RULE_target = 43, RULE_target_trailer = 44, RULE_subscriptList = 45, RULE_subscript = 46, 
		RULE_augmentedAssignmentOp = 47, RULE_expression = 48, RULE_lambdef = 49, 
		RULE_lambdaParameters = 50, RULE_lambdaParameter = 51, RULE_yield_expression = 52, 
		RULE_or_boolean_expression = 53, RULE_and_boolean_expression = 54, RULE_not_boolean_expression = 55, 
		RULE_comparison_expression = 56, RULE_comp_op = 57, RULE_additive_expression = 58, 
		RULE_multiplicative_expression = 59, RULE_unary_expression = 60, RULE_power_expression = 61, 
		RULE_atom_expression = 62, RULE_atom = 63, RULE_listOrComprehension = 64, 
		RULE_comp_for = 65, RULE_comp_iter = 66, RULE_comp_if = 67, RULE_trailer = 68, 
		RULE_dict_or_set = 69, RULE_dict_items = 70, RULE_dict_item = 71, RULE_expression_list = 72, 
		RULE_arglist = 73, RULE_argument = 74;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "simple_statement", "small_stmt", "returnStatement", 
			"passStatement", "breakStatement", "continueStatement", "delStatement", 
			"targetList", "assertStatement", "globalStatement", "raiseStatement", 
			"nonlocalStatement", "compound_statement", "asyncFunctionDef", "asyncForStatement", 
			"asyncWithStatement", "ifStatement", "forStatement", "whileStatement", 
			"withStatement", "withItem", "tryStatement", "exceptClause", "classStatement", 
			"expression_statement", "decoratedDef", "decorator", "functionDef", "parameters", 
			"parameter", "annotatedAssignmentStatement", "suite", "block", "importStatement", 
			"importNameStatement", "importFromStatement", "relativeImportTarget", 
			"importAsName", "importAsNames", "dottedName", "assignmentStatement", 
			"target", "target_trailer", "subscriptList", "subscript", "augmentedAssignmentOp", 
			"expression", "lambdef", "lambdaParameters", "lambdaParameter", "yield_expression", 
			"or_boolean_expression", "and_boolean_expression", "not_boolean_expression", 
			"comparison_expression", "comp_op", "additive_expression", "multiplicative_expression", 
			"unary_expression", "power_expression", "atom_expression", "atom", "listOrComprehension", 
			"comp_for", "comp_iter", "comp_if", "trailer", "dict_or_set", "dict_items", 
			"dict_item", "expression_list", "arglist", "argument"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'and'", "'@'", "'as'", "'assert'", "'break'", "'class'", 
			"'continue'", "'def'", "'del'", "'if'", "'elif'", "'else'", "'except'", 
			"'False'", "'finally'", "'for'", "'from'", "'global'", "'import'", "'in'", 
			"'is'", "'None'", "'not'", "'or'", "'pass'", "'raise'", "'return'", "'try'", 
			"'True'", "'while'", "'with'", "'async'", "'await'", "'lambda'", "'nonlocal'", 
			"'yield'", "'>='", "'<='", "'!='", "'=='", "'**'", "'//'", "'+='", "'-='", 
			"'*='", "'/='", "'...'", "'->'", "'='", "'+'", "'-'", "'*'", "'/'", "'%'", 
			"'>'", "'<'", "'.'", "'('", "')'", "'['", "']'", "'{'", "'}'", "':'", 
			"','", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INDENT", "DEDENT", "AND", "AT", "AS", "ASSERT", "BREAK", "CLASS", 
			"CONTINUE", "DEF", "DEL", "IF", "ELIF", "ELSE", "EXCEPT", "FALSE", "FINALLY", 
			"FOR", "FROM", "GLOBAL", "IMPORT", "IN", "IS", "NONE", "NOT", "OR", "PASS", 
			"RAISE", "RETURN", "TRY", "TRUE", "WHILE", "WITH", "ASYNC", "AWAIT", 
			"LAMBDA", "NONLOCAL", "YIELD", "GTE", "LTE", "NEQ", "EQ", "POWER", "FLOOR_DIV", 
			"ADD_ASSIGN", "SUB_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", "ELLIPSIS", "ARROW", 
			"ASSIGN", "ADD", "SUB", "MUL", "DIV", "MOD", "GT", "LT", "DOT", "LPAREN", 
			"RPAREN", "LBRACK", "RBRACK", "LBRACE", "RBRACE", "COLON", "COMMA", "SEMICOLON", 
			"STRING", "NUMBER", "IDENTIFIER", "NEWLINE", "SKIP_", "UNKNOWN_CHAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FlaskParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FlaskParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(FlaskParser.EOF, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(FlaskParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(FlaskParser.NEWLINE, i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskParserListener ) ((FlaskParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskParserListener ) ((FlaskParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlaskParserVisitor ) return ((FlaskParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 5778118871592280016L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 481L) != 0)) {
				{
				setState(152);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case NEWLINE:
					{
					setState(150);
					match(NEWLINE);
					}
					break;
				case AT:
				case ASSERT:
				case BREAK:
				case CLASS:
				case CONTINUE:
				case DEF:
				case DEL:
				case IF:
				case FALSE:
				case FOR:
				case FROM:
				case GLOBAL:
				case IMPORT:
				case NONE:
				case NOT:
				case PASS:
				case RAISE:
				case RETURN:
				case TRY:
				case TRUE:
				case WHILE:
				case WITH:
				case ASYNC:
				case AWAIT:
				case LAMBDA:
				case NONLOCAL:
				case YIELD:
				case ADD:
				case SUB:
				case LPAREN:
				case LBRACK:
				case LBRACE:
				case STRING:
				case NUMBER:
				case IDENTIFIER:
					{
					setState(151);
					statement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(156);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(157);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public Simple_statementContext simple_statement() {
			return getRuleContext(Simple_statementContext.class,0);
		}
		public Compound_statementContext compound_statement() {
			return getRuleContext(Compound_statementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskParserListener ) ((FlaskParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskParserListener ) ((FlaskParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlaskParserVisitor ) return ((FlaskParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(161);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ASSERT:
			case BREAK:
			case CONTINUE:
			case DEL:
			case FALSE:
			case FROM:
			case GLOBAL:
			case IMPORT:
			case NONE:
			case NOT:
			case PASS:
			case RAISE:
			case RETURN:
			case TRUE:
			case AWAIT:
			case LAMBDA:
			case NONLOCAL:
			case YIELD:
			case ADD:
			case SUB:
			case LPAREN:
			case LBRACK:
			case LBRACE:
			case STRING:
			case NUMBER:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(159);
				simple_statement();
				}
				break;
			case AT:
			case CLASS:
			case DEF:
			case IF:
			case FOR:
			case TRY:
			case WHILE:
			case WITH:
			case ASYNC:
				enterOuterAlt(_localctx, 2);
				{
				setState(160);
				compound_statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Simple_statementContext extends ParserRuleContext {
		public Small_stmtContext small_stmt() {
			return getRuleContext(Small_stmtContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(FlaskParser.NEWLINE, 0); }
		public Simple_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simple_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskParserListener ) ((FlaskParserListener)listener).enterSimple_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskParserListener ) ((FlaskParserListener)listener).exitSimple_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlaskParserVisitor ) return ((FlaskParserVisitor<? extends T>)visitor).visitSimple_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Simple_statementContext simple_statement() throws RecognitionException {
		Simple_statementContext _localctx = new Simple_statementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_simple_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			small_stmt();
			setState(164);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Small_stmtContext extends ParserRuleContext {
		public ImportStatementContext importStatement() {
			return getRuleContext(ImportStatementContext.class,0);
		}
		public AssignmentStatementContext assignmentStatement() {
			return getRuleContext(AssignmentStatementContext.class,0);
		}
		public AnnotatedAssignmentStatementContext annotatedAssignmentStatement() {
			return getRuleContext(AnnotatedAssignmentStatementContext.class,0);
		}
		public Expression_statementContext expression_statement() {
			return getRuleContext(Expression_statementContext.class,0);
		}
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public PassStatementContext passStatement() {
			return getRuleContext(PassStatementContext.class,0);
		}
		public BreakStatementContext breakStatement() {
			return getRuleContext(BreakStatementContext.class,0);
		}
		public ContinueStatementContext continueStatement() {
			return getRuleContext(ContinueStatementContext.class,0);
		}
		public DelStatementContext delStatement() {
			return getRuleContext(DelStatementContext.class,0);
		}
		public AssertStatementContext assertStatement() {
			return getRuleContext(AssertStatementContext.class,0);
		}
		public GlobalStatementContext globalStatement() {
			return getRuleContext(GlobalStatementContext.class,0);
		}
		public NonlocalStatementContext nonlocalStatement() {
			return getRuleContext(NonlocalStatementContext.class,0);
		}
		public RaiseStatementContext raiseStatement() {
			return getRuleContext(RaiseStatementContext.class,0);
		}
		public Small_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_small_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskParserListener ) ((FlaskParserListener)listener).enterSmall_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskParserListener ) ((FlaskParserListener)listener).exitSmall_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlaskParserVisitor ) return ((FlaskParserVisitor<? extends T>)visitor).visitSmall_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Small_stmtContext small_stmt() throws RecognitionException {
		Small_stmtContext _localctx = new Small_stmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_small_stmt);
		try {
			setState(179);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(166);
				importStatement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(167);
				assignmentStatement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(168);
				annotatedAssignmentStatement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(169);
				expression_statement();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(170);
				returnStatement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(171);
				passStatement();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(172);
				breakStatement();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(173);
				continueStatement();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(174);
				delStatement();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(175);
				assertStatement();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(176);
				globalStatement();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(177);
				nonlocalStatement();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(178);
				raiseStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ReturnStatementContext extends ParserRuleContext {
		public TerminalNode RETURN() { return getToken(FlaskParser.RETURN, 0); }
		public Expression_listContext expression_list() {
			return getRuleContext(Expression_listContext.class,0);
		}
		public ReturnStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskParserListener ) ((FlaskParserListener)listener).enterReturnStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskParserListener ) ((FlaskParserListener)listener).exitReturnStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlaskParserVisitor ) return ((FlaskParserVisitor<? extends T>)visitor).visitReturnStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReturnStatementContext returnStatement() throws RecognitionException {
		ReturnStatementContext _localctx = new ReturnStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_returnStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(181);
			match(RETURN);
			setState(183);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((((_la - 16)) & ~0x3f) == 0 && ((1L << (_la - 16)) & 63420036854350593L) != 0)) {
				{
				setState(182);
				expression_list();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PassStatementContext extends ParserRuleContext {
		public TerminalNode PASS() { return getToken(FlaskParser.PASS, 0); }
		public PassStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_passStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskParserListener ) ((FlaskParserListener)listener).enterPassStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskParserListener ) ((FlaskParserListener)listener).exitPassStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlaskParserVisitor ) return ((FlaskParserVisitor<? extends T>)visitor).visitPassStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PassStatementContext passStatement() throws RecognitionException {
		PassStatementContext _localctx = new PassStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_passStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(185);
			match(PASS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BreakStatementContext extends ParserRuleContext {
		public TerminalNode BREAK() { return getToken(FlaskParser.BREAK, 0); }
		public BreakStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_breakStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskParserListener ) ((FlaskParserListener)listener).enterBreakStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskParserListener ) ((FlaskParserListener)listener).exitBreakStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlaskParserVisitor ) return ((FlaskParserVisitor<? extends T>)visitor).visitBreakStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BreakStatementContext breakStatement() throws RecognitionException {
		BreakStatementContext _localctx = new BreakStatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_breakStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(187);
			match(BREAK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ContinueStatementContext extends ParserRuleContext {
		public TerminalNode CONTINUE() { return getToken(FlaskParser.CONTINUE, 0); }
		public ContinueStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_continueStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskParserListener ) ((FlaskParserListener)listener).enterContinueStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskParserListener ) ((FlaskParserListener)listener).exitContinueStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlaskParserVisitor ) return ((FlaskParserVisitor<? extends T>)visitor).visitContinueStatement(this);
			else return visitor.visitChildren(this);
		}
	}
